# mobile-sentinel

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  proptest.toml
android/caps/accessibility/: build.gradle.kts
android/caps/accessibility/src/main/kotlin/com/mobilesentinel/: SentinelAccessibilityService.kt
android/caps/accessibility/src/main/res/values/: strings.xml
android/caps/accessibility/src/main/res/xml/: sentinel_accessibility_config.xml
android/caps/audio/: build.gradle.kts
android/caps/audio/src/main/kotlin/com/mobilesentinel/: SentinelAudioPreviewPrimitives.kt
android/caps/battery/: build.gradle.kts
android/caps/battery/src/main/kotlin/com/mobilesentinel/: SentinelBatteryPrimitives.kt
android/caps/biometric/: build.gradle.kts
android/caps/biometric/src/main/kotlin/com/mobilesentinel/: SentinelBiometricHelper.kt  SentinelBiometricsPrimitives.kt
android/caps/calendar/: build.gradle.kts
android/caps/calendar/src/main/kotlin/com/mobilesentinel/: SentinelCalendarPrimitives.kt
android/caps/camera/: build.gradle.kts
android/caps/camera/src/main/kotlin/com/mobilesentinel/: SentinelCameraActivity.kt  SentinelCameraHelper.kt
android/caps/camera/src/main/res/xml/: sentinel_camera_paths.xml
android/caps/clipboard/: build.gradle.kts
android/caps/clipboard/src/main/kotlin/com/mobilesentinel/: SentinelClipboardPrimitives.kt
android/caps/contacts/: build.gradle.kts
android/caps/contacts/src/main/kotlin/com/mobilesentinel/: SentinelContactsPrimitives.kt
android/caps/device_admin/: build.gradle.kts
android/caps/device_admin/src/main/kotlin/com/mobilesentinel/: SentinelAdminReceiver.kt  SentinelDeviceAdminPrimitives.kt
android/caps/dismiss_guard/: build.gradle.kts
android/caps/dismiss_guard/src/main/kotlin/com/mobilesentinel/: SentinelDismissGuardPrimitives.kt
android/caps/display/: build.gradle.kts
android/caps/display/src/main/kotlin/com/mobilesentinel/: SentinelDisplayPrimitives.kt
android/caps/exact_alarm/: build.gradle.kts
android/caps/exact_alarm/src/main/: AndroidManifest.xml
android/caps/exact_alarm/src/main/kotlin/com/mobilesentinel/: SentinelAlarmReceiver.kt  SentinelBootReceiver.kt  SentinelBootService.kt  SentinelExactAlarmPrimitives.kt  SentinelTimeChangeReceiver.kt
android/caps/file_system/: build.gradle.kts
android/caps/file_system/src/main/kotlin/com/mobilesentinel/: SentinelFileSystemPrimitives.kt
android/caps/firing_audio/: build.gradle.kts
android/caps/firing_audio/src/main/kotlin/com/mobilesentinel/: SentinelFiringAudioPrimitives.kt
android/caps/firing_vibration/: build.gradle.kts
android/caps/firing_vibration/src/main/kotlin/com/mobilesentinel/: SentinelFiringVibrationPrimitives.kt
android/caps/foreground_service/: build.gradle.kts
android/caps/foreground_service/src/main/: AndroidManifest.xml
android/caps/foreground_service/src/main/kotlin/com/mobilesentinel/: SentinelForegroundService.kt  SentinelForegroundServicePrimitives.kt
android/caps/foregrounding/: build.gradle.kts
android/caps/foregrounding/src/main/kotlin/com/mobilesentinel/: SentinelForegroundingPrimitives.kt
android/caps/full_screen_intent/: build.gradle.kts
android/caps/full_screen_intent/src/main/kotlin/com/mobilesentinel/: SentinelFullScreenIntentPrimitives.kt
android/caps/haptics/: build.gradle.kts
android/caps/haptics/src/main/kotlin/com/mobilesentinel/: SentinelHapticPrimitives.kt
android/caps/jobs/: build.gradle.kts
android/caps/jobs/src/main/: AndroidManifest.xml
android/caps/jobs/src/main/kotlin/com/mobilesentinel/: SentinelJobGuardian.kt  SentinelJobsInitializer.kt
android/caps/kiosk/: build.gradle.kts
android/caps/kiosk/src/main/: AndroidManifest.xml
android/caps/kiosk/src/main/kotlin/com/mobilesentinel/: SentinelKioskController.kt  SentinelKioskInitializer.kt  SentinelKioskPrimitives.kt
android/caps/location/: build.gradle.kts
android/caps/location/src/main/kotlin/com/mobilesentinel/: SentinelLocationPrimitives.kt
android/caps/maps/: build.gradle.kts
android/caps/media_picker/: build.gradle.kts
android/caps/network/: build.gradle.kts
android/caps/notifications/: build.gradle.kts
android/caps/overlay/: build.gradle.kts
android/caps/permissions/: build.gradle.kts
android/caps/phone/: build.gradle.kts
android/caps/scanner/: build.gradle.kts
android/caps/screen_pin/: build.gradle.kts
android/caps/secure_storage/: build.gradle.kts
android/caps/sensors/: build.gradle.kts
android/caps/share/: build.gradle.kts
android/caps/sms/: build.gradle.kts
android/caps/torch/: build.gradle.kts
android/caps/wake_lock/: build.gradle.kts
android/core/: build.gradle.kts  consumer-rules.pro
android/core/src/main/: AndroidManifest.xml
android/core/src/main/kotlin/com/mobilesentinel/: SentinelActivityTracker.kt  SentinelBridge.kt  SentinelCoreInitializer.kt  SentinelPrimitives.kt
docs/: API.md
src/: error.rs  firing.rs  init.rs  lib.rs  sink_types.rs  testing.rs  types.rs
src/features/: accessibility.rs  audio.rs  battery.rs  biometric.rs  calendar.rs  camera.rs  clipboard.rs  common.rs  contacts.rs  device_admin.rs  dismiss_guard.rs  display.rs  file_system.rs  foregrounding.rs  haptics.rs  jobs.rs  location.rs  maps.rs  media_picker.rs  mod.rs  network.rs  notifications.rs  overlay.rs  permissions.rs  phone.rs  scanner.rs  screen_pin.rs  secure_storage.rs  sensors.rs  share.rs  sms.rs  torch.rs
src/features/sound/: library.rs  mod.rs  sound_id.rs
src/features/state_store/: mod.rs  revision.rs
src/platform/: callbacks_stub.rs  mod.rs
src/platform/android/: callbacks.rs  context.rs  firing_sink_android.rs  jni.rs  mod.rs  sensor_state.rs  sound_backend_android.rs
src/recipes/: dispatch.rs  mod.rs  recipe.rs  registry.rs  snooze.rs  test_lock.rs  trigger.rs
src/recipes/alarm_kit/: alarm_class.rs  mod.rs
src/recipes/context/: mod.rs  schema.rs
src/recipes/recurrence/: dst.rs  engine.rs  mod.rs  schedule.rs
src/utilities/: app_dirs.rs  asset_extractor.rs  mod.rs
tests/: correctness_properties.rs  generic_strings.rs  manifest_process_topology.rs
(+16 files in other folders)
